syntax = "proto3";

option csharp_namespace = "PatternPal.LoggingServer";

package log;

// The greeting service definition.

service LogCollectorService {
  // Sends a greeting
  rpc Log (LogRequest) returns (LogResponse);
}

// Input arguments for recognizer request.
message LogRequest {

// Required columns 
EventType event_type = 1;
string event_id = 2;
string subject_id = 3;
string tool_instances = 4;

// Optional columns
string client_timestamp = 5;
string experimental_condition = 6; 
string logging_error_id = 7;
optional string parent_event_id = 8;
string session_id =9;
optional string project_id = 10;
optional string code_state_section = 11;
EventInitiator event_initiatior = 12;
EditType edit_type = 13;
string compile_result = 14;
optional string compile_message_type = 15;
optional string compile_message_data = 16;
optional string source_location = 17;
string execution_id = 18;
string test_id = 19;
optional ExecutionResult execution_result = 20;
string intervention_category = 21;
string intervention_type = 22;
string intervention_message = 23;
string recognizer_result = 24;
string recognizer_config = 25;
optional bytes data = 26;
optional bool full_code_state = 27;
}

// Input arguments for recognizer response
message LogResponse {

    string message = 1;

}

enum EventType
{
    EVT_UNKNOWN = 0;
    EVT_SESSION_START = 1;
    EVT_SESSION_END = 2;
    EVT_PROJECT_OPEN = 3;
    EVT_PROJECT_CLOSE = 4;
    EVT_FILE_CREATE = 5;
    EVT_FILE_DELETE = 6;
    EVT_FILE_OPEN = 7;
    EVT_FILE_CLOSE = 8;
    EVT_FILE_FOCUS = 9;
    EVT_FILE_RENAME = 10;
    EVT_FILE_COPY = 11;
    EVT_FILE_EDIT = 12;
    EVT_COMPILE = 13;
    EVT_COMPILE_ERROR = 14;
    EVT_COMPILE_WARNING = 15;
    EVT_SUBMIT = 16;
    EVT_RUN_PROGRAM = 17;
    EVT_DEBUG_PROGRAM = 18;
    EVT_RUN_TEST = 19;
    EVT_DEBUG_TEST = 20;
    EVT_RESOURCE_VIEW = 21;
    EVT_INTERVENTION = 22;
    EVT_X_RECOGNIZER_RUN = 23;
    EVT_X_STEP_BY_STEP_STEP = 24; 
}

enum EventInitiator
{
    EI_UNKNOWN = 0;
    EI_USER_DIRECT_ACTION = 1;
    EI_USER_INDIRECT_ACTION = 2;
    EI_TOOL_REACTION = 3;
    EI_TOOL_TIMED_EVENT = 4;
    EI_INSTRUCTOR_DIRECT_ACTION = 5;
    EI_INSTRUCTOR_INDIRECT_ACTION = 6;
    EI_TEAM_MEMBER_DIRECT_ACTION = 7;
    EI_TEAM_MEMBER_INDIRECT_ACTION = 8;
    EI_CUSTOM_EVENT_INITIATOR = 9;
}

enum EditType
{
    ET_UNKNOWN = 0;
    ET_GENERIC_EDIT = 1;
    ET_INSERT = 2;
    ET_DELETE = 3;
    ET_REPLACE = 4;
    ET_MOVE = 5;
    ET_PASTE = 6;
    ET_UNDO = 7;
    ET_REDO = 8;
    ET_REFACTOR = 9;
    ET_RESET = 10;
    ET_CUSTOM_EDIT_TYPE = 11;
}

enum ExecutionResult
{
    EXT_UNKNOWN = 0;
    EXT_SUCCES = 1;
    EXT_TIMEOUT = 2;
    EXT_ERROR = 3;
    EXT_TESTFAILED = 4;
}